Wed Mar 16 12:53:13 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* templates/automake.mpd:

	  Don't add libraries to _LIBADD for convenience libraries.

Wed Mar 16 12:31:52 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* templates/automake.mpd:

	  Don't add -version-number to LDFLAGS for convenience libraries.

Wed Mar 16 10:42:45 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* templates/automake.mpd:

	  Use += instead of = for _MANS, _SCRIPTS, and _HEADERS.

Fri Mar 11 07:56:49 2005  Chad Elliott  <elliott_c@ociweb.com>

        * templates/nmakeexe.mpt:

          Debug and Release xecutable were getting the 'staticflags' due to
          a side effect of the way scoping works in the TemplateParser.  The
          solution is to set 'need_staticflags' to empty in the Release and
          Debug sections.

Fri Mar 11 07:03:04 2005  Chad Elliott  <elliott_c@ociweb.com>

        * templates/nmake.mpd:

          Fixed a bug in the intermediate directory for the precompiled
          header object file.  Also, move some targets around such that
          'all' is the first target in the generated makefile.

Thu Mar 10 21:08:24 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * modules/AutomakeWorkspaceCreator.pm:

          Emit the RCS/CVS Id in the boilerplate at the beginning of the
          workspace Makefile.am in three separate substrings so that it's
          not expanded each time this file is changed.

Thu Mar 10 20:13:58 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * modules/AutomakeWorkspaceCreator.pm:

          Scan project Makefile.am's for pkgconfig_DATA, if it is present
          emit "pkgconfigdir = @libdir@/pkgconfig" at the begining of the
          workspace Makefile.am.  This will help avoid typos like the ACE
          pkgconfigdir definition in 5.4.4.

Wed Mar  9 08:53:39 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Remove duplicate 'macros' when adding or subtracting.
